# factory-dataframe

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
factory_dataframe/: base.py  errors.py  pandas.py  pyspark.py  utils.py
tests/: conftest.py  fixtures.py
tests/pandas/: conftest.py  fixtures.py  pandas_test.py  test_pandas.py
tests/pyspark/: conftest.py  fixtures.py  spark_test.py  test_spark.py
