[tool.poetry]
name = "factory-dataframe"
version = "0.1.0"
description = "factory-dataframe is fixture replacement for pyspark and pandas dataframe."
authors = ["Burak Demirtas <burak@burakdemirtas.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
pyspark = "^3.5.1"
pyarrow = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
Faker = "^24.1.0"
pytest-check = "^2.3.1"
black = "^24.2.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
skip_glob = ["tests"]

[tool.black]
line-length = 79
include = '\.py'
extend-exclude = '''
/(
\.git
| \.pyc
| \.mypy_cache
| \.pytest_cache
| pycache
| mappings
| __pycache__
| \venv
| \.env
| \.venv
| client
| _build
| build
| dist
)/
| .mako
| .pyc
'''
